Fixed spacing between sections / fixed size of meetings calendar to better match figma design / added meeting card for weekend

--- a/style/scss/_how-contribute.scss
+++ b/style/scss/_how-contribute.scss
@@ -3,10 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.6rem;
   background-color: $greyish-white;
   position: relative;
-  padding: 3.2rem 2.4rem;
 
   @media only screen and (min-width: $laptop-size) {
     padding-bottom: 4rem;
