--- a/style/scss/_stories.scss
+++ b/style/scss/_stories.scss
@@ -5,11 +5,9 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 1.6rem;
-  padding: 3.2rem 2.4rem;
 
   &-text {
-    padding: 3.5rem;
+    padding: 1.2rem;
     font-size: 1.6rem;
     line-height: 130%;
     text-wrap: balance;
