--- a/style/scss/_team.scss
+++ b/style/scss/_team.scss
@@ -3,8 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.6rem;
-  padding: 3.2rem 2.4rem;
   background-color: #f3f3f3;
 
   p {
