--- a/style/style.css
+++ b/style/style.css
@@ -29,8 +29,9 @@ a {
   text-decoration: none;
 }
 
-section:target {
-  padding-top: 10rem !important;
+section {
+  padding: 7.2rem 2.4rem;
+  gap: 1.6rem;
 }
 
 @keyframes shake {
@@ -673,7 +674,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3.2rem 2.4rem;
   overflow: hidden;
 }
 .our-mission__content {
@@ -797,11 +797,6 @@ header {
     display: none;
   }
 }
-@media only screen and (min-width: 768px) {
-  .our-mission {
-    padding: 2.4rem 6rem;
-  }
-}
 @media only screen and (min-width: 1024px) and (max-width: 1280px) {
   .our-mission {
     padding: 7rem 13.5rem;
@@ -820,10 +815,8 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.6rem;
   background-color: #f7f7f7;
   position: relative;
-  padding: 3.2rem 2.4rem;
 }
 @media only screen and (min-width: 1024px) {
   .how-contribute {
@@ -1085,8 +1078,6 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.6rem;
-  padding: 3.2rem 2.4rem;
 }
 .why-contribute__description {
   display: flex;
@@ -1125,9 +1116,6 @@ header {
 }
 
 @media screen and (min-width: 1024px) {
-  .why-contribute {
-    padding-bottom: 12rem;
-  }
   .why-contribute__title {
     padding: 7rem 0 3.5rem;
   }
@@ -1149,11 +1137,6 @@ header {
   .why-contribute__reasons__reason p {
     font-size: 1.8rem;
     padding-top: 1.4rem;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .why-contribute {
-    padding-bottom: 20.2rem;
   }
 }
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -1229,8 +1212,6 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.6rem;
-  padding: 3.2rem 2.4rem;
   background-color: #f3f3f3;
 }
 .team p {
@@ -1422,11 +1403,9 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 1.6rem;
-  padding: 3.2rem 2.4rem;
 }
 .stories-text {
-  padding: 3.5rem;
+  padding: 1.2rem;
   font-size: 1.6rem;
   line-height: 130%;
   text-wrap: balance;
@@ -1622,8 +1601,6 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  gap: 1.6rem;
-  padding: 3.2rem 2.4rem;
   background-color: #f7f7f7;
 }
 .join-us-section h2 {
@@ -1762,7 +1739,7 @@ header {
 
 .meeting-section {
   position: relative;
-  width: clamp(280px, 80rem, 100%);
+  width: clamp(280px, 68rem, 100%);
   margin: 3rem 0 0;
 }
 
@@ -1773,8 +1750,9 @@ header {
   gap: 0 20px;
 }
 .meeting-days .meeting-day {
-  width: clamp(50px, 20%, 200px);
-  font-size: 24px;
+  width: clamp(50px, 12rem, 100%);
+  height: 6rem;
+  font-size: 1.8rem;
   font-weight: bold;
   background-color: #ffffff;
   border-left: 1px solid rgba(47, 121, 115, 0.5);
@@ -1783,7 +1761,6 @@ header {
   border-bottom: none;
   border-radius: 15px;
   color: #000000;
-  padding: 26px 0;
   cursor: pointer;
   transition: 0.25s ease-out;
   letter-spacing: 2px;
@@ -1814,7 +1791,8 @@ header {
   margin: 3rem 0 0;
   gap: 20px;
 }
-.meeting-schedule .meeting-card {
+.meeting-schedule .meeting-card,
+.meeting-schedule .weekend-card {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -1826,29 +1804,30 @@ header {
   border-top: none;
   border-bottom: none;
   border-radius: 15px;
-  cursor: pointer;
   min-height: 136px;
+}
+.meeting-schedule .meeting-card {
+  cursor: pointer;
   transition: all 0.25s ease-out;
 }
 .meeting-schedule .meeting-card__top {
-  font-size: 20px;
+  font-size: 1.8rem;
   font-weight: 600;
   color: #000000;
   margin-bottom: 0.15rem;
   letter-spacing: 1px;
 }
-.meeting-schedule .meeting-card__middle {
-  font-size: 24px;
+.meeting-schedule .meeting-card__middle, .meeting-schedule .meeting-card__bottom {
+  font-size: 2.2rem;
   font-weight: 700;
-  color: #2f7973;
   letter-spacing: 1px;
 }
+.meeting-schedule .meeting-card__middle {
+  color: #2f7973;
+}
 .meeting-schedule .meeting-card__bottom {
-  font-size: 30px;
-  font-weight: 700;
   margin-top: 0.6rem;
   color: #000000;
-  letter-spacing: 1px;
 }
 .meeting-schedule .meeting-card.active {
   background: #48AFAB;
@@ -1910,6 +1889,12 @@ header {
 }
 .meeting-schedule .meeting-card:focus::after, .meeting-schedule .meeting-card:focus::before {
   opacity: 1;
+}
+.meeting-schedule .weekend-card {
+  padding: 2.4rem;
+  font-size: 1.8rem;
+  line-height: 2.8rem;
+  font-weight: 600;
 }
 
 @media only screen and (max-width: 320px) {
